[tool.poetry]
name = "tuna"
version = "0.1.0"
description = "A very simple digital guitar tuner"
authors = ["Topi Latva-Salo <tohesala@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sounddevice = "^0.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
hypothesis = "^6.112.1"
coverage = "^7.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
